Fixed heredoc syntax example

--- a/dev/src/content/_articles/stubbing-rest-services-with-php/index.hbs
+++ b/dev/src/content/_articles/stubbing-rest-services-with-php/index.hbs
@@ -31,7 +31,7 @@ published: true
 &lt;?php
 header('Access-Control-Allow-Origin: *');
 header('Content-Type: application/json');
-echo &gt;&gt;&gt; EOT
+echo &lt;&lt;&lt; EOT
 {
     "count":1,
     "templateHeaders":[
