--- a/dev/src/content/index.hbs
+++ b/dev/src/content/index.hbs
@@ -8,6 +8,17 @@ published: true
 layout: page.hbs
 ---
 
+<section class="masthead">
+    <div>
+        <picture>
+            <source srcset="/assets/images/sail_2000x400@80.jpg" media="(min-width: 1200px)">
+            <source srcset="/assets/images/sail_2000x600@60.jpg" media="(min-width: 800px)">
+            <source srcset="/assets/images/sail_2000x1125@60.jpg" media="(min-width: 500px)">
+            <img src="/assets/images/sail_1000x563@60.jpg" srcset="/assets/images/sail_1000x563@60.jpg" alt="Simple, smart, fast">
+        </picture>
+    </div>
+</section>
+
 <section>
 
     <h1>Simple, smart,&nbsp;fast</h1>
