--- a/dev/scss/_page.home.scss
+++ b/dev/scss/_page.home.scss
@@ -1,1 +1,15 @@
 //  ## HOME PAGE SPECIFIC  ----------------------------------------------------------//
+
+.page-home .main {
+    padding-top: 0;
+}
+
+.masthead {
+    margin: 20px 0 50px;
+    max-width: none;
+    padding: 0;
+}
+
+.masthead img {
+    width: 100%;
+}
