--- a/dev/scss/_common.scss
+++ b/dev/scss/_common.scss
@@ -34,7 +34,7 @@ figure p {
     line-height: 30px;
 }
 
-.social-links img {
+.social-links svg {
     float: left;
 }
 
@@ -42,13 +42,18 @@ figure p {
     display: none;
 }
 
-.social-link-github img {
+.social-link-github svg {
     height: 25px;
     margin-top: 2px;
     width: 25px;
 }
 
-.social-link-twitter img {
+.social-link-linkedin svg {
+    height: 30px;
+    width: 30px;
+}
+
+.social-link-twitter svg {
     height: 26px;
     margin-top: 3px;
     width: 26px;
