Linking to assets on S3

--- a/dev/src/content/_articles/alternating-boxes/index.hbs
+++ b/dev/src/content/_articles/alternating-boxes/index.hbs
@@ -22,7 +22,7 @@ published: true
     <p>After discussing an idea for a simple website with one of my design colleagues the other day I took it on myself to try and build a demo of the layout we were discussing. The idea seemed simple: a responsive grid with alternating coloured sections in a checker-board pattern. Sounds easy right…</p>
 
     <figure>
-        <img src="/assets/images/alternating-grid/alternating-grid.png" alt="Desired layouts">
+        <img src="https://s3.amazonaws.com/stphnsn-assets/images/alternating-grid/alternating-grid.png" alt="Desired layouts">
     </figure>
 
     <p>1) Mobile first - single column. 2) Two column alternating sections. 3) Three column checker-board.</p>
