--- a/dev/src/content/_articles/node-spotify-search/index.hbs
+++ b/dev/src/content/_articles/node-spotify-search/index.hbs
@@ -17,7 +17,24 @@ published: false
 <section>
 
     <h1>Node Spotify Search</h1>
-    <h2>Creating a responsive grid layout using nth-child</h2>
+    <h2>My first Node.js app</h2>
+
+<p></p>
+
+I recently completed the excellent <a href="http://www.teamtreehouse.com" rel="external">Treehouse</a> course on <a href="http://teamtreehouse.com/library/nodejs-basics">Node.js Basics</a> presented by my fellow Englishman in PDX Andrew <a href="https://twitter.com/chalkers" rel="external">Chalkers</a> Chalkley.
+
+The course runs through building a simple app that gets profile information from the Treehouse API.
+
+That was fine for a start but I wanted to do something with the Spotify API
+
+
+basic express routing
+
+Spotify API
+
+deploying to heroku
+
+http://node-spotify-search.herokuapp.com/
 
 
 
