--- a/dev/src/content/index.hbs
+++ b/dev/src/content/index.hbs
@@ -11,10 +11,10 @@ layout: page.hbs
 <section class="masthead">
     <div>
         <picture>
-            <source srcset="/assets/images/sail_2000x400@80.jpg" media="(min-width: 1200px)">
-            <source srcset="/assets/images/sail_2000x600@60.jpg" media="(min-width: 700px)">
-            <source srcset="/assets/images/sail_2000x1125@60.jpg" media="(min-width: 500px)">
-            <img src="/assets/images/sail_1000x563@60.jpg" srcset="/assets/images/sail_1000x563@60.jpg" alt="Simple, smart, fast">
+            <source srcset="https://s3.amazonaws.com/stphnsn-assets/images/sail_2000x400@80.jpg" media="(min-width: 1200px)">
+            <source srcset="https://s3.amazonaws.com/stphnsn-assets/images/sail_2000x600@60.jpg" media="(min-width: 700px)">
+            <source srcset="https://s3.amazonaws.com/stphnsn-assets/images/sail_2000x1125@60.jpg" media="(min-width: 500px)">
+            <img src="https://s3.amazonaws.com/stphnsn-assets/images/sail_1000x563@60.jpg" srcset="https://s3.amazonaws.com/stphnsn-assets/images/sail_1000x563@60.jpg" alt="Simple, smart, fast">
         </picture>
     </div>
 </section>
