--- a/dev/src/content/work/index.hbs
+++ b/dev/src/content/work/index.hbs
@@ -22,10 +22,10 @@ layout: page.hbs
 
     <h3>Your Year with Nike+</h3>
 
-    <p>To celebrate the accomplishments of the top 100,00 Nike+ athletes in 2014 AKQA worked with French illustrator McBess to create unique animated videos based on each athlete’s data. I built the website to deliver them. Read what the <a href="http://blogs.wsj.com/cmo/2015/01/07/nike-and-akqa-turn-peoples-running-data-into-100000-unique-videos/" rel="external">Wall Street Journal had to say</a>.</p>
+    <p>To celebrate the accomplishments of the top 100,000 Nike+ athletes in 2014 AKQA worked with French illustrator McBess to create unique animated videos based on each athlete’s data. I built the website to deliver them. Read what the <a href="http://blogs.wsj.com/cmo/2015/01/07/nike-and-akqa-turn-peoples-running-data-into-100000-unique-videos/" rel="external">Wall Street Journal had to say</a>.</p>
 
     <figure>
-        <a href="https://youryear.nikeapp.com/" rel="external"><img src="/assets/images/nike-year-in-review-video-still.jpg" alt="Still from the Nike Year in Review video"></a>
+        <a href="https://youryear.nikeapp.com/" rel="external"><img src="https://s3.amazonaws.com/stphnsn-assets/images/nike-year-in-review-video-still.jpg" alt="Still from the Nike Year in Review video"></a>
         <p><a href="https://youryear.nikeapp.com/" rel="external">View the site</a></p>
     </figure>
 
@@ -36,7 +36,7 @@ layout: page.hbs
     <p>The site itself has won a great deal of praise both internally and externally. It even won a few awards including <a href="http://www.thefwa.com/site/akqa">FWA Site of the Day</a> and was nominated for FWA Site of the Year 2014.</p>
 
     <figure>
-        <a href="http://akqa.com" rel="external"><img src="/assets/images/akqa-com-screenshot.jpg" alt="Screen shot of the AKQA.com website"></a>
+        <a href="http://akqa.com" rel="external"><img src="https://s3.amazonaws.com/stphnsn-assets/images/akqa-com-screenshot.jpg" alt="Screen shot of the AKQA.com website"></a>
         <p><a href="http://akqa.com" rel="external">View the site</a></p>
     </figure>
 
