--- a/dev/src/templates/partials/bottom.hbs
+++ b/dev/src/templates/partials/bottom.hbs
@@ -1,4 +1,4 @@
 
-    <script src="/assets/js/scripts.min.js"></script>
+    <script src="https://s3.amazonaws.com/stphnsn-assets/js/scripts.min.js"></script>
 </body>
 </html>
