--- a/dev/src/content/_articles/transparent-jpgs/index.hbs
+++ b/dev/src/content/_articles/transparent-jpgs/index.hbs
@@ -26,12 +26,12 @@ published: true
     <h2>Initial PNG set up</h2>
 
     <div class="example">
-        <figure class="item" style="background:url('/assets/images/transparent-jpgs/background-1.jpg');">
-            <img src="/assets/images/transparent-jpgs/AM1.png" width="306" height="306" alt="Transparent PNG">
+        <figure class="item" style="background:url('https://s3.amazonaws.com/stphnsn-assets/images/transparent-jpgs/background-1.jpg');">
+            <img src="https://s3.amazonaws.com/stphnsn-assets/images/transparent-jpgs/AM1.png" width="306" height="306" alt="Transparent PNG">
         </figure>
         <p>PNG on top of JPG - <strong>162KB</strong></p>
     </div>
-    
+
     <div class="code-block">
     <h6>Example HTML</h6>
         <pre>
@@ -60,7 +60,7 @@ published: true
 
     <div class="example">
         <div class="item">
-            <img src="/assets/images/transparent-jpgs/background-1.jpg" width="306" height="306">
+            <img src="https://s3.amazonaws.com/stphnsn-assets/images/transparent-jpgs/background-1.jpg" width="306" height="306">
         </div>
         <p>
             Background image JPG - <strong>25KB</strong>
@@ -71,7 +71,7 @@ published: true
 
     <div class="example">
         <div class="item">
-            <img src="/assets/images/transparent-jpgs/AM1.jpg" width="306" height="306">
+            <img src="https://s3.amazonaws.com/stphnsn-assets/images/transparent-jpgs/AM1.jpg" width="306" height="306">
         </div>
         <p>
             Shoe JPG - <strong>32KB</strong>
@@ -79,10 +79,10 @@ published: true
     </div>
 
     <p>The key part of to the compositing operation is the mask image. This is a black and white transparent PNG that knocks out the pixels from the JPG image. These are 8-bit PNGs around <strong>~4Kb</strong>.</p>
-    
+
     <div class="example">
         <div class="item mask">
-            <img src="/assets/images/transparent-jpgs/AM1-mask.png">
+            <img src="https://s3.amazonaws.com/stphnsn-assets/images/transparent-jpgs/AM1-mask.png">
         </div>
         <p>
             Mask 8-bit PNG - <strong>4KB</strong>
@@ -169,7 +169,7 @@ published: true
 
     <div class="example">
     <figure class="item">
-        <canvas class="transparent-jpg" style="background:url('/assets/images/transparent-jpgs/background-1.jpg');" width="612" height="612" data-rgb="/assets/images/transparent-jpgs/AM1.jpg" data-mask="/assets/images/transparent-jpgs/AM1-mask.png">
+        <canvas class="transparent-jpg" style="background:url('https://s3.amazonaws.com/stphnsn-assets/images/transparent-jpgs/background-1.jpg');" width="612" height="612" data-rgb="https://s3.amazonaws.com/stphnsn-assets/images/transparent-jpgs/AM1.jpg" data-mask="https://s3.amazonaws.com/stphnsn-assets/images/transparent-jpgs/AM1-mask.png">
         </canvas>
     </figure>
         <p>Combined file size of images - <strong>65KB</strong></p>
