--- a/dev/src/templates/partials/head.hbs
+++ b/dev/src/templates/partials/head.hbs
@@ -1,19 +1,14 @@
 <!doctype html>
 <html lang="en" class="no-js">
 <head>
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
     <meta name="description" content="">
     <meta name="keywords" content="">
-
     <title>{{#if this.page.data.title }}{{ this.page.data.title }} / {{/if}}STPHNSN</title>
-
-    <script src="/assets/js/modernizr.custom.js"></script>
-
+    <script src="https://s3.amazonaws.com/stphnsn-assets/js/modernizr.custom.js"></script>
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,800">
-    <link rel="stylesheet" href="/assets/css/styles.css">
-
+    <link rel="stylesheet" href="https://s3.amazonaws.com/stphnsn-assets/css/styles.css">
 </head>
 
 <body class="{{this.bodyclass}}">
