--- a/dev/src/content/_articles/node-rest-api-framework/index.hbs
+++ b/dev/src/content/_articles/node-rest-api-framework/index.hbs
@@ -7,27 +7,26 @@ layout: page.hbs
 title: "Node REST API Framework"
 pageid: "node-rest-api-framework"
 
-intro: ""
+intro: "Recently I have been doing a lot of work using REST-like APIs to add, update and delete JSON documents in a MongoDB database. I’ve refined the core of the latest Node.js app I wrote down into a framework that provides the endpoints needed to do CRUD operations."
 
 posted: 2015-05-18
-published: false
+published: true
 
 ---
 
 <section>
 
     <h1>Node REST API Framework</h1>
-    <h2>Creating services using Node.js, Express &amp; MongoDB</h2>
+    <h2>CRUD services using Node.js, Express &amp; MongoDB</h2>
 
-    <p>I have recently been doing quite a lot of work using REST like APIs to add, update and delete JSON documents in a MongoDB database.</p>
+    <p>Recently I have been doing a lot of work using REST-like APIs to add, update and delete JSON documents in a MongoDB database.</p>
 
-    <p>In creating these REST services I’ve refined my node.js app down into a little framework that provides the core endpoints needed to do basic data manipulation using REST.</p>
+    <p>I’ve refined the core of the latest Node.js app I wrote down into a reusable framework.</p>
 
-    <p>https://github.com/rstphnsn/node-rest-api-framework</p>
+    <p>Full documentation is up on GitHub <a href="https://github.com/rstphnsn/node-rest-api-framework">https://github.com/rstphnsn/node-rest-api-framework</a>.</p>
 
     <div class="cta">
-        <a href="http://weather.stphnsn.com" rel="external">View the app</a>
-        <a href="https://github.com/rstphnsn/last-years-weather" rel="external">Code on GitHub</a>
+        <a href="https://github.com/rstphnsn/node-rest-api-framework" rel="external">View on GitHub</a>
     </div>
 
 </section>
