--- a/dev/scss/_module.navigation.scss
+++ b/dev/scss/_module.navigation.scss
@@ -41,11 +41,11 @@
 }
 
 
-.js.csstransitions .site-navigation a {
+.js .site-navigation a {
     color: #000;
     transition: color 0.6s;
 }
 
-.js.csstransitions.loaded .site-navigation a {
+.js.loaded .site-navigation a {
     color: #FFF;
 }
