--- a/dev/src/templates/partials/head.hbs
+++ b/dev/src/templates/partials/head.hbs
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
     <meta name="description" content="">
     <meta name="keywords" content="">
-    <title>{{#if this.page.data.title }}{{ this.page.data.title }} / {{/if}}STPHNSN</title>
+    <title>{{#if this.page.data.title }}{{ this.page.data.title }} / {{/if}}STPHNSN / Richard Stephenson. Web Developer. AKQA.</title>
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,800">
     <link rel="stylesheet" href="https://s3.amazonaws.com/stphnsn-assets/css/styles.css">
+    <script>
+        document.documentElement.className += ' js';
+    </script>
 </head>
 
 <body class="{{this.bodyclass}}">
