Update intro copy

--- a/dev/src/content/index.hbs
+++ b/dev/src/content/index.hbs
@@ -24,7 +24,7 @@ layout: page.hbs
     <h1>Simple, smart,&nbsp;fast</h1>
     <h2>High performance digital&nbsp;engineering</h2>
 
-    <p>Hello, I’m Richard&nbsp;Stephenson, a website developer. Originally from <a href="http://en.wikipedia.org/wiki/Yorkshire" rel="external">Yorkshire</a>, I currently live in London, UK. I work for <a href="http://akqa.com" rel="external">AKQA</a> developing high performance web experiences for <a href="http://nike.com" rel="external">Nike</a>, <a href="http://mini.co.uk" rel="external">Mini</a> and others.</p>
+    <p>Hello, I’m Richard&nbsp;Stephenson, a website developer. Originally from <a href="http://en.wikipedia.org/wiki/Yorkshire" rel="external">Yorkshire</a>, I currently live in London. I work for <a href="http://akqa.com" rel="external">AKQA</a> developing high performance solutions for <a href="http://nike.com" rel="external">Nike</a>, <a href="http://mini.co.uk" rel="external">Mini</a> and others.</p>
 
     <p>Simple, smart, fast? Those are the keys to building world class websites.</p>
 
