Added MSPTP to Work page

--- a/dev/src/content/work/index.hbs
+++ b/dev/src/content/work/index.hbs
@@ -12,13 +12,21 @@ layout: page.hbs
 
     <h1>Work</h1>
 
-    <p>I work as a Principal Web Developer at <a href="http://akqa.com">AKQA</a> in Portland, Oregon. I have been a web designer, developer and manager for over 15 years in Leeds, Manchester and London.</p>
+    <p>I work as a Principal Web Developer at <a href="http://akqa.com">AKQA</a> in London, England. I have been a web designer, developer and manager for over 15 years in Leeds, Manchester, Portland OR, and London.</p>
 
     <p>I’ve worked for a number of leading creative agencies - both full time and as a freelancer - on a wide variety of client projects for brands such as Nike, Audi, Bank of America, BBC, Dr Martens, Asda, Travis Perkins, Lakeland, InterfaceFLOR, OTTO Group, and Visit Manchester.</p>
 
     <p>My role involves the planning and development of high performance mobile first web solutions. On a day to day basis I’m busy writing JavaScript, CSS and HTML. I also write PHP and node.js and I’m heavily involved in front-end tooling, prototyping, research and technical architecture.</p>
 
     <h2>Recent Projects</h2>
+
+    <h3>Marks &amp; Spencer Pass the Parcel</h3>
+
+    <p>For Marks &amp; Spencer’s 2015 Christmas campaign we launched a Pass the Parcel game based on social sharing. I worked as lead developer on the Angular.js front-end which consumed REST API services and utilised <a href="https://auth0.com/" rel="external">Auth0</a> security and profile management. Although the game was only active for 6 days 130,000 users registered to play and won over 200,000 prizes.</p>
+
+    <figure>
+        <img src="https://s3.amazonaws.com/stphnsn-assets/images/marks-and-spencer-pass-the-parcel.jpg" alt="Screenshot of the Pass the Parcel landing page"></a>
+    </figure>
 
     <h3>Your Year with Nike+</h3>
 
