--- a/dev/src/templates/partials/head.hbs
+++ b/dev/src/templates/partials/head.hbs
@@ -8,6 +8,7 @@
     <title>{{#if this.page.data.title }}{{ this.page.data.title }} / {{/if}}STPHNSN / Richard Stephenson. Web Developer.</title>
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,800">
     <link rel="stylesheet" href="https://s3.amazonaws.com/stphnsn-assets/css/styles.css">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <script>
         document.documentElement.className += ' js';
     </script>
