--- a/dev/src/content/work/index.hbs
+++ b/dev/src/content/work/index.hbs
@@ -12,11 +12,11 @@ layout: page.hbs
 
     <h1>Work</h1>
 
-    <p>I work as a Principal Web Developer at <a href="http://akqa.com">AKQA</a> in London, England. I have been a web designer, developer and manager for over 15 years in Leeds, Manchester, Portland OR, and London.</p>
+    <p>I work as a UI Development consultant at <a href="http://thoughtworks.com" rel="external">Thoughtworks</a> in London, England. I have been a web designer, developer and manager for over 15 years in London, Leeds, Manchester and Portland, OR.</p>
 
-    <p>I’ve worked for a number of leading creative agencies - both full time and as a freelancer - on a wide variety of client projects for brands such as Nike, Audi, Bank of America, BBC, Dr Martens, Asda, Travis Perkins, Lakeland, InterfaceFLOR, OTTO Group, and Visit Manchester.</p>
+    <p>I’ve worked for a number of leading creative agencies - both full time and as a freelancer - on a wide variety of client projects for brands such as Nike, Audi, Bank of America, BBC, Dr Martens, Asda, Ofgem, Travis Perkins, Lakeland, InterfaceFLOR, OTTO Group, and Visit Manchester.</p>
 
-    <p>My role involves the planning and development of high performance mobile first web solutions. On a day to day basis I’m busy writing JavaScript, CSS and HTML. I also write PHP and node.js and I’m heavily involved in front-end tooling, prototyping, research and technical architecture.</p>
+    <p>My role usually involves the planning and development of high performance mobile first web solutions. On a day to day basis I’m busy writing JavaScript, CSS and HTML. I also write node.js (and occasionally PHP). I’m also heavily involved in front-end tooling, prototyping, user research and technical architecture.</p>
 
     <h2>Recent Projects</h2>
 
