--- a/dev/src/content/index.hbs
+++ b/dev/src/content/index.hbs
@@ -21,28 +21,25 @@ layout: page.hbs
 
 <section>
 
-    <h1>Simple, smart,&nbsp;fast</h1>
-    <h2>High performance digital&nbsp;engineering</h2>
+    <h1>Front-end Architecture and Development</h1>
 
-    <p>Hello, I’m Richard&nbsp;Stephenson, a website developer. Originally from <a href="http://en.wikipedia.org/wiki/Yorkshire" rel="external">Yorkshire</a>, I currently live in London. I work for <a href="http://akqa.com" rel="external">AKQA</a> developing high performance solutions for <a href="http://nike.com" rel="external">Nike</a>, <a href="http://mini.co.uk" rel="external">Mini</a> and others.</p>
-
-    <p>Simple, smart, fast? Those are the keys to building world class websites.</p>
+    <p>Hello, I’m Richard a web developer based in London. An <a href="http://akqa.com" rel="external">AKQA</a> Alumni I currently work for <a href="http://thoughtworks.com" rel="external">ThoughtWorks</a> as a consultant.</p>
 
     <ul class="social-links">
-        <li class="social-link-github">
-            <a href="https://github.com/rstphnsn" rel="external">
-                <svg role="img" aria-label="GitHub icon" width="50" height="50" viewBox="0 0 50 50">
-                    <path fill="#fff" d="M2.22 25.643C2.22 36.57 8.73 45.785 17.78 49h.406c.814 0 1.12-.644 1.12-1.18v-4.177c-.815.213-1.526.213-2.238.213-4.373 0-5.39-3.535-5.39-3.535-1.017-2.785-2.542-3.642-2.542-3.642-2.034-1.5-.102-1.5.102-1.5 2.237.215 3.56 2.57 3.56 2.57 1.118 2.145 2.644 2.68 3.965 2.68 1.017 0 2.034-.322 2.644-.644.204-1.606.813-2.68 1.424-3.32-5.083-.644-10.372-2.68-10.372-12.107 0-2.68.916-4.93 2.34-6.643-.204-.643-1.018-3.107.203-6.536h.51c.813 0 2.745.322 5.796 2.572 1.83-.536 3.763-.857 5.695-.857 1.934 0 3.865.322 5.696.857 3.05-2.25 4.982-2.572 5.797-2.572H37c1.22 3.43.407 5.894.203 6.536 1.425 1.714 2.34 3.964 2.34 6.643 0 9.428-5.39 11.464-10.476 12.107.814.75 1.628 2.356 1.628 4.606 0 3.322-.103 5.785-.103 6.644 0 .536.408 1.286 1.22 1.286h.408c9.05-3.215 15.56-12.535 15.56-23.357C47.78 12.036 37.61 1 25 1S2.22 12.036 2.22 25.643z"/>
-                </svg>
-                <span>GitHub</span>
-            </a>
-        </li>
         <li class="social-link-linkedin">
             <a href="http://www.linkedin.com/in/rstphnsn" rel="external">
                 <svg role="img" aria-label="LinkedIn icon" width="50" height="50" viewBox="0 0 50 50">
                     <path fill="#fff" d="M8.83 4.428c-1.83 0-3.355 1.394-3.355 3.215v34.393c0 1.82 1.525 3.536 3.356 3.536h32.543c1.83 0 3.153-1.715 3.153-3.536V7.643c0-1.82-1.322-3.214-3.153-3.214H8.83zm3.153 34.287V20.393h5.593v18.322h-5.593zm2.95-21.108c-1.832 0-2.95-1.393-2.95-3.107 0-1.822 1.22-3.214 3.05-3.214 1.83 0 2.95 1.393 2.95 3.214 0 1.714-1.22 3.107-3.05 3.107zm17.49 21.108v-10.07c0-2.36-.812-3.966-2.847-3.966-1.525 0-2.44 1.07-2.848 2.142-.203.43-.203.964-.203 1.5v10.394h-5.593V20.393h5.593v2.572c.813-1.18 2.136-3 5.085-3 3.66 0 6.407 2.57 6.407 8.036v10.716h-5.593z"/>
                 </svg>
                 <span>LinkedIn</span>
+            </a>
+        </li>
+        <li class="social-link-github">
+            <a href="https://github.com/rstphnsn" rel="external">
+                <svg role="img" aria-label="GitHub icon" width="50" height="50" viewBox="0 0 50 50">
+                    <path fill="#fff" d="M2.22 25.643C2.22 36.57 8.73 45.785 17.78 49h.406c.814 0 1.12-.644 1.12-1.18v-4.177c-.815.213-1.526.213-2.238.213-4.373 0-5.39-3.535-5.39-3.535-1.017-2.785-2.542-3.642-2.542-3.642-2.034-1.5-.102-1.5.102-1.5 2.237.215 3.56 2.57 3.56 2.57 1.118 2.145 2.644 2.68 3.965 2.68 1.017 0 2.034-.322 2.644-.644.204-1.606.813-2.68 1.424-3.32-5.083-.644-10.372-2.68-10.372-12.107 0-2.68.916-4.93 2.34-6.643-.204-.643-1.018-3.107.203-6.536h.51c.813 0 2.745.322 5.796 2.572 1.83-.536 3.763-.857 5.695-.857 1.934 0 3.865.322 5.696.857 3.05-2.25 4.982-2.572 5.797-2.572H37c1.22 3.43.407 5.894.203 6.536 1.425 1.714 2.34 3.964 2.34 6.643 0 9.428-5.39 11.464-10.476 12.107.814.75 1.628 2.356 1.628 4.606 0 3.322-.103 5.785-.103 6.644 0 .536.408 1.286 1.22 1.286h.408c9.05-3.215 15.56-12.535 15.56-23.357C47.78 12.036 37.61 1 25 1S2.22 12.036 2.22 25.643z"/>
+                </svg>
+                <span>GitHub</span>
             </a>
         </li>
         <li class="social-link-twitter">
